force-app/main/default/objects/SFDC_Class__c/fields/Allowed_absences__c.field-meta.xml
<CustomField>
    <fullName>Allowed_absences__c</fullName>
    <label>Allowed Absences</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>