force-app/main/default/objects/SFDC_Class__c/fields/Block_Text_Messaging__c.field-meta.xml
<CustomField>
    <fullName>Block_Text_Messaging__c</fullName>
    <label>Block Text Messaging ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>