force-app/main/default/objects/SFDC_Class__c/fields/Certification_Course__c.field-meta.xml
<CustomField>
    <fullName>Certification_Course__c</fullName>
    <formula>Product__r.Certification_Course__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certification Course</label>
    <type>Checkbox</type>
</CustomField>