force-app/main/default/objects/SFDC_Class__c/fields/Check_if_Home_Care_Class__c.field-meta.xml
<CustomField>
    <fullName>Check_if_Home_Care_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a backend field which is hidden on Page layout. This field will be checked if class recordtype is &quot;Home Care Class&quot;. It will be unchecked, if recordtype of class is &quot;EdFund Class&quot;</description>
    <label>Check if Home Care Class</label>
    <type>Checkbox</type>
</CustomField>