force-app/main/default/objects/SFDC_Class__c/fields/Class_assigned_to_Instructor_Id2_Count__c.field-meta.xml
<CustomField>
    <fullName>Class_assigned_to_Instructor_Id2_Count__c</fullName>
    <label># Classes assigned to Instructor 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>