force-app/main/default/objects/SFDC_Class__c/fields/Class_Course__c.field-meta.xml
<CustomField>
    <fullName>Class_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>((1 AND 2) AND 3) OR ((1 AND 4) AND 5)</booleanFilter>
        <filterItems>
            <field>CCA_Course__c.Is_it_an_Active_Course__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>EdFund Class</value>
        </filterItems>
        <filterItems>
            <field>CCA_Course__c.Course_Category__c</field>
            <operation>equals</operation>
            <value>Education Fund</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Home Care Class</value>
        </filterItems>
        <filterItems>
            <field>CCA_Course__c.Course_Category__c</field>
            <operation>equals</operation>
            <value>IHSS / Cuidado en Casa</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CCA_Course__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>