force-app/main/default/objects/SFDC_Class__c/fields/Class_Days__c.field-meta.xml
<CustomField>
    <fullName>Class_Days__c</fullName>
    <label>Class Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Class_Schedule__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>