force-app/main/default/objects/SFDC_Class__c/fields/Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Class_ID__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <label>Class ID</label>
    <type>AutoNumber</type>
</CustomField>