force-app/main/default/objects/SFDC_Class__c/fields/Class_Mode__c.field-meta.xml
<CustomField>
    <fullName>Class_Mode__c</fullName>
    <label>Class Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online : Zoom</fullName>
            </value>
            <value>
                <fullName>Classroom / In-facility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>