force-app/main/default/objects/SFDC_Class__c/fields/Class_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Class_Schedule__c</fullName>
    <label>Class Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekday</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>