force-app/main/default/objects/SFDC_Class__c/fields/Class_Status__c.field-meta.xml
<CustomField>
    <fullName>Class_Status__c</fullName>
    <label>Class Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Upcoming</fullName>
                <default>true</default>
                <label>Upcoming</label>
            </value>
            <value>
                <fullName>Ongoing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>