force-app/main/default/objects/SFDC_Class__c/fields/Class_Status_C__c.field-meta.xml
<CustomField>
    <fullName>Class_Status_C__c</fullName>
    <formula>TEXT(Class_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Status - C</label>
    <type>Text</type>
</CustomField>