force-app/main/default/objects/SFDC_Class__c/fields/competency_created__c.field-meta.xml
<CustomField>
    <fullName>competency_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will let us know that competency has created for enrollment or not?</description>
    <label>Competency Check created?</label>
    <type>Checkbox</type>
</CustomField>