force-app/main/default/objects/SFDC_Class__c/fields/Competency_Dup_Check__c.field-meta.xml
<CustomField>
    <fullName>Competency_Dup_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competency Dup Check</label>
    <type>Checkbox</type>
</CustomField>