force-app/main/default/objects/SFDC_Class__c/fields/Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Coordinator__c</fullName>
    <label>Coordinator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;</fullName>
            </value>
            <value>
                <fullName>Adi Quezada</fullName>
            </value>
            <value>
                <fullName>Adora Ma</fullName>
            </value>
            <value>
                <fullName>Aida Nalbandin</fullName>
            </value>
            <value>
                <fullName>Alicia Gonzalez</fullName>
            </value>
            <value>
                <fullName>Amelia Acosta</fullName>
            </value>
            <value>
                <fullName>American Medical Career College Instructor1</fullName>
            </value>
            <value>
                <fullName>American Medical Careers Instructor1</fullName>
            </value>
            <value>
                <fullName>Anahid Hovakimyans</fullName>
            </value>
            <value>
                <fullName>Anali Velazquez</fullName>
            </value>
            <value>
                <fullName>Andrea Garcia</fullName>
            </value>
            <value>
                <fullName>Angela Valle</fullName>
            </value>
            <value>
                <fullName>Angelica Crespo</fullName>
            </value>
            <value>
                <fullName>Angelica Hinds</fullName>
            </value>
            <value>
                <fullName>Angie Xu</fullName>
            </value>
            <value>
                <fullName>Anka Ung</fullName>
            </value>
            <value>
                <fullName>Anna Kasumyan</fullName>
            </value>
            <value>
                <fullName>Annie Lee</fullName>
            </value>
            <value>
                <fullName>Antonio Borras</fullName>
            </value>
            <value>
                <fullName>Ashley Mangum</fullName>
            </value>
            <value>
                <fullName>Assessment Test</fullName>
            </value>
            <value>
                <fullName>Ayesha Dixon</fullName>
            </value>
            <value>
                <fullName>Berenice Campos</fullName>
            </value>
            <value>
                <fullName>Bertha Cardenas</fullName>
            </value>
            <value>
                <fullName>Blanca Lopez</fullName>
            </value>
            <value>
                <fullName>Brenda Tidmore</fullName>
            </value>
            <value>
                <fullName>Brenda Pineda</fullName>
            </value>
            <value>
                <fullName>CAIPTC Staff1</fullName>
            </value>
            <value>
                <fullName>CAIPTC Staff2</fullName>
            </value>
            <value>
                <fullName>CAIPTC Staff3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>