force-app/main/default/objects/SFDC_Class__c/fields/Count_of_Enrollment_Result_Dropped1__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Enrollment_Result_Dropped1__c</fullName>
    <formula>Count_of_Enrollment_Result_Dropped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Enrollment Result-Dropped</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>