force-app/main/default/objects/SFDC_Class__c/fields/Count_of_Enrollment_Result_Incomplete__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Enrollment_Result_Incomplete__c</fullName>
    <label>Count of Enrollment Result-Incomplete</label>
    <summaryFilterItems>
        <field>SFDC_Enrollment__c.Class_Result__c</field>
        <operation>equals</operation>
        <value>Incomplete</value>
    </summaryFilterItems>
    <summaryForeignKey>SFDC_Enrollment__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>