force-app/main/default/objects/SFDC_Class__c/fields/Count_of_Enrollment_Status_Enrolled1__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Enrollment_Status_Enrolled1__c</fullName>
    <description>Total Students who were interested in this Class (includes Removal, Transferred students along with Active enrolled students)</description>
    <formula>Count_of_Enrollment_Status_Enrolled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Students who were interested in this Class (includes Removal, Transferred students along with Active enrolled students)</inlineHelpText>
    <label>Total # of Students Enrolled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>