force-app/main/default/objects/SFDC_Class__c/fields/Count_of_Enrollment_Status_No_Show__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Enrollment_Status_No_Show__c</fullName>
    <label>Count of Enrollment Status-No Show</label>
    <summaryFilterItems>
        <field>SFDC_Enrollment__c.Status__c</field>
        <operation>equals</operation>
        <value>No show</value>
    </summaryFilterItems>
    <summaryForeignKey>SFDC_Enrollment__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>