force-app/main/default/objects/SFDC_Class__c/fields/Count_of_Pass__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Pass__c</fullName>
    <label>Count of Pass</label>
    <summaryFilterItems>
        <field>SFDC_Enrollment__c.Pass_DNP__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>SFDC_Enrollment__c.Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>