force-app/main/default/objects/SFDC_Class__c/fields/Count_of_Roster__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Roster__c</fullName>
    <label>Count of Roster</label>
    <summaryForeignKey>Roaster__c.Class_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>