force-app/main/default/objects/SFDC_Class__c/fields/dummy_name__c.field-meta.xml
<CustomField>
    <fullName>dummy_name__c</fullName>
    <label>dummy name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>