force-app/main/default/objects/SFDC_Class__c/fields/EdFund_Facility__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the Edfund facility where the class is conducted</inlineHelpText>
    <label>EdFund Facilitiy</label>
    <referenceTo>EdFund_Facilites__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>