force-app/main/default/objects/SFDC_Class__c/fields/EdFund_Vendor__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EdFund Vendor</label>
    <referenceTo>EdFund_Vendor__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>