force-app/main/default/objects/SFDC_Class__c/fields/Empower_Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Empower_Class_ID__c</fullName>
    <description>This is the Class ID from Empower system (legacy system)</description>
    <label>Empower Class ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>