force-app/main/default/objects/SFDC_Class__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Location</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>