force-app/main/default/objects/SFDC_Class__c/fields/Follow_Up__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up__c</fullName>
    <label>Follow-Up</label>
    <type>TextArea</type>
</CustomField>