force-app/main/default/objects/SFDC_Class__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <label>Grant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>