force-app/main/default/objects/SFDC_Class__c/fields/Instructor_1__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1__c</fullName>
    <formula>Instructor_ID__r.First_Name__c + &apos; &apos; + Instructor_ID__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor 1</label>
    <type>Text</type>
</CustomField>