force-app/main/default/objects/SFDC_Class__c/fields/Instructor_1_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1_Assigned_By__c</fullName>
    <label>Instructor 1 Assigned By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>