force-app/main/default/objects/SFDC_Class__c/fields/Instructor_1_Assigned_On__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1_Assigned_On__c</fullName>
    <label>Instructor 1 Assigned On</label>
    <type>Date</type>
</CustomField>