force-app/main/default/objects/SFDC_Class__c/fields/Instructor_2__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2__c</fullName>
    <formula>Instructor_ID_2__r.First_Name__c + &apos; &apos; + Instructor_ID_2__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor 2</label>
    <type>Text</type>
</CustomField>