force-app/main/default/objects/SFDC_Class__c/fields/Is_it_a_CNA_Other_class__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_CNA_Other_class__c</fullName>
    <inlineHelpText>Please select the appropriate program if the class is CPR/CNA related</inlineHelpText>
    <label>Is it ETP Compliant Class?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>CPR</fullName>
                <isActive>false</isActive>
                <label>CPR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>