force-app/main/default/objects/SFDC_Class__c/fields/isRosterCreated__c.field-meta.xml
<CustomField>
    <fullName>isRosterCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRosterCreated</label>
    <type>Checkbox</type>
</CustomField>